<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Brite&amp;Lite</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="Username">User Name</string>
    <string name="Password">Password</string>
    <string name="LoginBtn">Log In</string>
    <string name="SignupBtn">Not a Member Yet</string>
    <string name="action_logout">Logout</string>
    <string name="welcome_message">Welcome</string>
    <string name="Parse_example">Parse Example</string>
    <string name="facebook_app_id">797340470314180</string>
    <string name="parse_app_id">dWhNbga0xbjExgSG2mm5VLttaG4sTA2cD5i9KIXY</string>
    <string name="parse_client_key">uDrZI6mZ8T3Bi7e0Ehw0hH6u5P6OaJevViy17Geq</string>
    <string name="twitter_consumer_key">PVT2s6olyYDz6lT0BidVeBfUG</string>
    <string name="twitter_consumer_secret">8Usu4WzxGi3vg7YZ5iiIKf6iwk5bBHIBRWtvrFWdDztqIM18Sk</string>
    <string name="action_service_window">Service Window</string>
    <string name="action_subscription">Subscription</string>
    <string name="action_photo_share">Photo Share</string>
    <string name="menu_item_add_address">Add Address</string>
    <string name="title_activity_photo_sharing">Share Experience</string>
    <string name="take_picture">Take Photo</string>
    <string name="share">Share</string>
    <string name="action_back">Go back</string>
    <string name="photo_subject_line">BriteLiteUsa service feedback</string>
    <string name="photo_body_line">A metropolitan laundry and dry cleaning service at your doorstep. Check this app at http://briteliteusa.com created by Krunal Patel</string>
    <string name="share_text">Share your experience about our service with your friends.</string>
    <string name="title_activity_estimate_price">EstimatePrice</string>
    <string name="title_price_estimator">Price Estimator Title (Will add Price estimator calculator to see website calculator go to http://www.briteliteusa.com/)</string>
    <string name="title_activity_subscription">Subscription</string>
    <string name="title_activity_service_window">Service Window</string>
    <string name="Service_window_title">Here I will let user select their own service window.</string>
    <string name="select_subscription_title">Select a subscription</string>
    <string name="button_select_subscription">Select</string>
    <string name="profile_progress_message">Your Profile Progress</string>
    <string name="add_address">Add Address</string>
    <string name="change_address">Change Address</string>
    <string name="subscription_negative_button">Subscribe</string>
    <string name="subscription_positive_button">Change</string>
    <string name="Set_Service_Window">Set Service Window</string>
    <string name="place_order">Place Order</string>
    <string name="subscription_status_positive">Your subscription ends on  </string>
    <string name="subscription_status_negative">You don\'t have active subscription</string>
    <string name="address_status_negative">We don\'t have your address</string>
    <string name="address_status_positive">Current Address: </string>
    <string name="service_window_status_negative">Set pickup and dropoff time</string>
    <string name="title_activity_address">Contact Detail</string>
    <string name="address_addressline1_input_hint">Address Line 1</string>
    <string name="address_apartment_input_hint">Apartment</string>
    <string name="address_city_input_hint">City</string>
    <string name="address_state_input_hint">State</string>
    <string name="address_country_input_hint">Country</string>
    <string name="address_zipcode_input_hint">zipcode</string>
    <string name="address_phone_input_hint">Phone</string>
    <string name="add_address_button_label">Add Address</string>
    <string name="addressline1_toast_message">Address Line 1 is empty</string>
    <string name="apartment_toast_message">Apartment is empty</string>
    <string name="city_toast_message">City is empty</string>
    <string name="state_toast_message">State is empty</string>
    <string name="country_toast_message">Country is empty</string>
    <string name="zipcode_toast_message">zip code is empty</string>
    <string name="phone_toast_message">phone is empty</string>
    <string name="save_error_toast_message">Unsuccessful attempt please try later.</string>
    <string name="zipcode_need_to_be_integer_error">Zip code has to be a number</string>
    <string name="phone_need_to_be_integer_error">Phone number should be number</string>
    <string name="pickup_day_label">Pickup Day : </string>
    <string name="pickup_time_label">Pickup Time : </string>
    <string name="dropoff_time_label">Drop off time : </string>
    <string name="dropoff_day_label">Drop off Day : </string>
    <string name="set_preference_button_label">Set Preference</string>
    <string name="service_window_error_message">Please leave 24 hour gap between pickup and drop off.</string>
    <string name="service_window_button_change">Change Preference</string>
    <string name="same_subscription_selected_message">Same Subscription Plan Selected</string>
    <string name="subscription_plan_renew_message">Your subscription plan has been renewed</string>
    <string name="subscription_successfully_saved_message">subscription successfully taken</string>
    <string name="subscription_span">30</string>
    <string name="internet_not_available_error">Check Your Internet Connection</string>
    <string name="at_least_select_one_plan">At least select one plan</string>
    <string name="photo_not_found_error">Please take photo before sharing</string>
    <string name="profile_complete_message">Your profile is complete</string>

</resources>
